[build-system]
requires = ["flit >= 1.1"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "flaque"
author = "Thomas Sarboni"
author-email = "max-k@post.com"
home-page = "https://github.com/max-k/flaque"
requires = [
    'click',
]
requires-python=">=3.6,<4"
description-file="README.rst"
classifiers=[
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
doc = ["sphinx"]

[tool.flit.metadata.urls]
#Documentation = "https://flaque.readthedocs.io/en/latest/"

[tool.flit.scripts]
flaque = "flaque.__main__:main"

[tool.tidypy]
exclude = [
    'test/.*',
    'build/.*',
    'dist/.*',
    '.mypy_cache/*',
    '.eggs/.*',
]

[tool.tidypy.pycodestyle]
disabled = [
    'E731',
]

[tool.tidypy.pydocstyle]
disabled = [
    'D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D107',
    'D200', 'D202', 'D203', 'D212',
    'D301',
    'D400', 'D401',
]

[tool.tidypy.pylint]
disabled = [
    'missing-docstring',
]

[tool.tidypy.pylint.options]
min-public-methods = 0

[tool.tidypy.yamllint]
disabled = [
    'empty-lines',
    'document-start',
]

[tool.tidypy.vulture]
use = false
